--- a/Star Pattern.vcxproj.filters
+++ b/Star Pattern.vcxproj.filters
@@ -30,5 +30,11 @@
     <ClCompile Include="Q5.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q6.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q7.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
