--- a/Star Pattern.vcxproj.filters
+++ b/Star Pattern.vcxproj.filters
@@ -36,5 +36,20 @@
     <ClCompile Include="Q7.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q8.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q9.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q10.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q11.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q12.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
