--- a/Star Pattern.vcxproj.filters
+++ b/Star Pattern.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="Q12.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q13.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
