--- a/Star Pattern.vcxproj.filters
+++ b/Star Pattern.vcxproj.filters
@@ -54,5 +54,14 @@
     <ClCompile Include="Q13.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q14.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q15.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Q16.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
