--- a/Star Pattern.vcxproj.filters
+++ b/Star Pattern.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="Q16.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Q17.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
